// Vitest Snapshot v1

exports[`Image > Image baseVue demo works fine 1`] = `
<div
  class="image-group"
  data-v-37d8259d=""
>
  <div
    class="image-demo"
    data-v-37d8259d=""
  >
    <p
      class="image-demo-tip"
      data-v-37d8259d=""
    >
      fill
    </p>
    <div
      class="t-image t-image--square image-container"
      data-v-37d8259d=""
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
          </div>
          
          <!--v-if-->
          <!---->
        </div>
      </div>
      <picture>
        <!--v-if-->
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </picture>
    </div>
  </div>
  <div
    class="image-demo"
    data-v-37d8259d=""
  >
    <p
      class="image-demo-tip"
      data-v-37d8259d=""
    >
      contain
    </p>
    <div
      class="t-image t-image--square image-container"
      data-v-37d8259d=""
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
          </div>
          
          <!--v-if-->
          <!---->
        </div>
      </div>
      <picture>
        <!--v-if-->
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: contain; object-position: center;"
        />
      </picture>
    </div>
  </div>
  <div
    class="image-demo"
    data-v-37d8259d=""
    style="width: 134px;"
  >
    <p
      class="image-demo-tip"
      data-v-37d8259d=""
    >
      cover
    </p>
    <div
      class="t-image t-image--square image-container"
      data-v-37d8259d=""
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
          </div>
          
          <!--v-if-->
          <!---->
        </div>
      </div>
      <picture>
        <!--v-if-->
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: cover; object-position: center;"
        />
      </picture>
    </div>
  </div>
</div>
`;

exports[`Image > Image mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-d8a5fc24=""
>
  <h1
    class="title"
    data-v-d8a5fc24=""
  >
    Image 图片
  </h1>
  <p
    class="summary"
    data-v-d8a5fc24=""
  >
    用于展示效果，主要为上下左右居中裁切、拉伸、平铺等方式。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-d8a5fc24=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="image-group"
        data-v-37d8259d=""
        data-v-d8a5fc24=""
      >
        <div
          class="image-demo"
          data-v-37d8259d=""
        >
          <p
            class="image-demo-tip"
            data-v-37d8259d=""
          >
            fill
          </p>
          <div
            class="t-image t-image--square image-container"
            data-v-37d8259d=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src="https://tdesign.gtimg.com/site/upload1.png"
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
        </div>
        <div
          class="image-demo"
          data-v-37d8259d=""
        >
          <p
            class="image-demo-tip"
            data-v-37d8259d=""
          >
            contain
          </p>
          <div
            class="t-image t-image--square image-container"
            data-v-37d8259d=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src="https://tdesign.gtimg.com/site/upload1.png"
                style="object-fit: contain; object-position: center;"
              />
            </picture>
          </div>
        </div>
        <div
          class="image-demo"
          data-v-37d8259d=""
          style="width: 134px;"
        >
          <p
            class="image-demo-tip"
            data-v-37d8259d=""
          >
            cover
          </p>
          <div
            class="t-image t-image--square image-container"
            data-v-37d8259d=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src="https://tdesign.gtimg.com/site/upload1.png"
                style="object-fit: cover; object-position: center;"
              />
            </picture>
          </div>
        </div>
      </div>
      <div
        class="image-group"
        data-v-5f48b8f6=""
        data-v-d8a5fc24=""
      >
        <div
          class="image-demo"
          data-v-5f48b8f6=""
        >
          <p
            class="image-demo-tip"
            data-v-5f48b8f6=""
          >
            方形
          </p>
          <div
            class="t-image t-image--square image-container"
            data-v-5f48b8f6=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src="https://tdesign.gtimg.com/site/upload1.png"
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
        </div>
        <div
          class="image-demo"
          data-v-5f48b8f6=""
        >
          <p
            class="image-demo-tip"
            data-v-5f48b8f6=""
          >
            圆角方形
          </p>
          <div
            class="t-image t-image--round image-container"
            data-v-5f48b8f6=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src="https://tdesign.gtimg.com/site/upload1.png"
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
        </div>
        <div
          class="image-demo"
          data-v-5f48b8f6=""
        >
          <p
            class="image-demo-tip"
            data-v-5f48b8f6=""
          >
            圆形
          </p>
          <div
            class="t-image t-image--circle image-container"
            data-v-5f48b8f6=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt="一张图片"
                class="t-image__img"
                src="https://tdesign.gtimg.com/site/upload1.png"
                style="object-fit: cover; object-position: center;"
              />
            </picture>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-d8a5fc24=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-20e0193e=""
      >
        <div
          class="col"
          data-v-20e0193e=""
        >
          <p
            class="tips"
            data-v-20e0193e=""
          >
            加载默认提示
          </p>
          <div
            class="t-image t-image--round image-container"
            data-v-20e0193e=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src=""
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
        </div>
        <div
          class="col"
          data-v-20e0193e=""
        >
          <p
            class="tips"
            data-v-20e0193e=""
          >
            加载自定义提示
          </p>
          <div
            class="t-image t-image--round image-container"
            data-v-20e0193e=""
          >
            <div
              class="t-image__mask"
            >
              
              <div
                class="t-loading"
                data-v-20e0193e=""
                style="font-size: 20px;"
              >
                
                <svg
                  class="t-loading__gradient t-icon-loading"
                  height="1em"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                  version="1.1"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <foreignobject
                    height="12"
                    width="12"
                    x="0"
                    y="0"
                  >
                    <div
                      class="t-loading__gradient-conic"
                    />
                  </foreignobject>
                </svg>
                
                <!--v-if-->
                <!---->
              </div>
              
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src=""
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
        </div>
      </div>
      <div
        class="row"
        data-v-20e0193e=""
      >
        <div
          class="col"
          data-v-20e0193e=""
        >
          <p
            class="tips"
            data-v-20e0193e=""
          >
            失败默认提示
          </p>
          <div
            class="t-image t-image--round image-container"
            data-v-20e0193e=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src="x"
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
        </div>
        <div
          class="col"
          data-v-20e0193e=""
        >
          <p
            class="tips"
            data-v-20e0193e=""
          >
            失败自定义提示
          </p>
          <div
            class="t-image t-image--round image-container"
            data-v-20e0193e=""
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                </div>
                
                <!--v-if-->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src=""
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Image > Image shapeVue demo works fine 1`] = `
<div
  class="image-group"
  data-v-5f48b8f6=""
>
  <div
    class="image-demo"
    data-v-5f48b8f6=""
  >
    <p
      class="image-demo-tip"
      data-v-5f48b8f6=""
    >
      方形
    </p>
    <div
      class="t-image t-image--square image-container"
      data-v-5f48b8f6=""
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
          </div>
          
          <!--v-if-->
          <!---->
        </div>
      </div>
      <picture>
        <!--v-if-->
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </picture>
    </div>
  </div>
  <div
    class="image-demo"
    data-v-5f48b8f6=""
  >
    <p
      class="image-demo-tip"
      data-v-5f48b8f6=""
    >
      圆角方形
    </p>
    <div
      class="t-image t-image--round image-container"
      data-v-5f48b8f6=""
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
          </div>
          
          <!--v-if-->
          <!---->
        </div>
      </div>
      <picture>
        <!--v-if-->
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: fill; object-position: center;"
        />
      </picture>
    </div>
  </div>
  <div
    class="image-demo"
    data-v-5f48b8f6=""
  >
    <p
      class="image-demo-tip"
      data-v-5f48b8f6=""
    >
      圆形
    </p>
    <div
      class="t-image t-image--circle image-container"
      data-v-5f48b8f6=""
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
          </div>
          
          <!--v-if-->
          <!---->
        </div>
      </div>
      <picture>
        <!--v-if-->
        <img
          alt="一张图片"
          class="t-image__img"
          src="https://tdesign.gtimg.com/site/upload1.png"
          style="object-fit: cover; object-position: center;"
        />
      </picture>
    </div>
  </div>
</div>
`;

exports[`Image > Image statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-20e0193e=""
  >
    <div
      class="col"
      data-v-20e0193e=""
    >
      <p
        class="tips"
        data-v-20e0193e=""
      >
        加载默认提示
      </p>
      <div
        class="t-image t-image--round image-container"
        data-v-20e0193e=""
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
            </div>
            
            <!--v-if-->
            <!---->
          </div>
        </div>
        <picture>
          <!--v-if-->
          <img
            alt=""
            class="t-image__img"
            src=""
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
    </div>
    <div
      class="col"
      data-v-20e0193e=""
    >
      <p
        class="tips"
        data-v-20e0193e=""
      >
        加载自定义提示
      </p>
      <div
        class="t-image t-image--round image-container"
        data-v-20e0193e=""
      >
        <div
          class="t-image__mask"
        >
          
          <div
            class="t-loading"
            data-v-20e0193e=""
            style="font-size: 20px;"
          >
            
            <svg
              class="t-loading__gradient t-icon-loading"
              height="1em"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
              version="1.1"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <foreignobject
                height="12"
                width="12"
                x="0"
                y="0"
              >
                <div
                  class="t-loading__gradient-conic"
                />
              </foreignobject>
            </svg>
            
            <!--v-if-->
            <!---->
          </div>
          
        </div>
        <picture>
          <!--v-if-->
          <img
            alt=""
            class="t-image__img"
            src=""
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
    </div>
  </div>
  <div
    class="row"
    data-v-20e0193e=""
  >
    <div
      class="col"
      data-v-20e0193e=""
    >
      <p
        class="tips"
        data-v-20e0193e=""
      >
        失败默认提示
      </p>
      <div
        class="t-image t-image--round image-container"
        data-v-20e0193e=""
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
            </div>
            
            <!--v-if-->
            <!---->
          </div>
        </div>
        <picture>
          <!--v-if-->
          <img
            alt=""
            class="t-image__img"
            src="x"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
    </div>
    <div
      class="col"
      data-v-20e0193e=""
    >
      <p
        class="tips"
        data-v-20e0193e=""
      >
        失败自定义提示
      </p>
      <div
        class="t-image t-image--round image-container"
        data-v-20e0193e=""
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
            </div>
            
            <!--v-if-->
            <!---->
          </div>
        </div>
        <picture>
          <!--v-if-->
          <img
            alt=""
            class="t-image__img"
            src=""
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
    </div>
  </div>
  
</div>
`;
